# pokemon

./: .gitignore  flake.nix
backend/: .ignore  alembic.ini  database.sqlite  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 33aabac55ec7_initial.py
backend/app/: _models.py  battle.py  deps.py  main.py  models.py
backend/app/auth/: auth.py  jwt.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/routes/: +page.svelte
